fixed extra paddings and redirect to link in new tab

--- a/src/components/assets/css/home.css
+++ b/src/components/assets/css/home.css
@@ -57,8 +57,7 @@ input:-internal-autofill-selected {
   text-align: center;
 }
 .form1 {
-  margin: 0 0 20px;
-  padding: 5px 0 90px;
+  padding: 5px 0 20px;
   width: 100%;
 }
 .avatarBox {
